--- a/index.html
+++ b/index.html
@@ -20,24 +20,12 @@
                 extend: {
                     fontFamily: {
                         nunito: ['Nunito', 'sans-serif'],
-                    },
-                    colors: {
-                        'kawaii-blue': '#eff6ff',
-                        'kawaii-mint': '#34d399',
-                        'kawaii-mint-dark': '#10b981',
-                        'pastel-blue': '#93c5fd',
-                        'pastel-pink': '#f9a8d4',
-                        'pastel-yellow': '#fde047',
-                        'pastel-teal': '#99f6e4',
                     }
                 }
             }
         }
     </script>
     
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
     <!-- Google Fonts: Nunito -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,12 +34,11 @@
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
-    <!-- Linking to LOML-specific CSS -->
+    <!-- Strictly lowercase links for reliability -->
     <link rel="stylesheet" href="loml_style.css">
 </head>
 <body class="font-nunito overflow-x-hidden selection:bg-blue-200">
     <div id="root"></div>
-    <!-- Linking to LOML-specific Script -->
     <script type="text/babel" src="loml_script.js"></script>
 </body>
 </html>
