--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
     <!-- Strictly lowercase links for reliability -->
-    <link rel="stylesheet" href="loml_style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-nunito overflow-x-hidden selection:bg-blue-200">
     <div id="root"></div>
-    <script type="text/babel" src="loml_script.js"></script>
+    <script type="text/babel" src="script.js"></script>
 </body>
 </html>
