--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 </head>
 <body class="font-nunito overflow-x-hidden selection:bg-blue-200">
     <!-- "Ready to Bloom" Launch Screen -->
-    <div id="splash-screen" class="fixed inset-0 z-[200] flex flex-col items-center justify-center bg-[#eff6ff] transition-opacity duration-700">
+    <div id="launch-screen" class="fixed inset-0 z-[9999] flex flex-col items-center justify-center bg-[#eff6ff] transition-opacity duration-500 ease-out">
         <!-- Reusing the polka-dot pattern for the splash background -->
         <div class="absolute inset-0 pointer-events-none opacity-50" style="background-image: radial-gradient(#dbeafe 2px, transparent 2px); background-size: 32px 32px;"></div>
         
         <div class="relative flex flex-col items-center animate-pop">
             <span class="absolute -top-12 -left-10 text-5xl animate-bounce">🌸</span>
-            <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Animals/Cat%20Face.png" class="w-40 h-40 drop-shadow-xl z-10" alt="Launch Logo">
+            <img src="app-icon.png" id="launch-logo" class="w-40 h-40 drop-shadow-xl z-10" alt="Meow Macros">
             <span class="absolute -bottom-2 -right-12 text-5xl animate-bounce" style="animation-delay: 0.5s">🌼</span>
             <h2 class="text-2xl font-black text-blue-400 mt-8 tracking-tight text-center px-6">Ready to bloom &<br/>grow strong!</h2>
         </div>
