--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="loml_style.css">
 </head>
 <body class="font-nunito overflow-x-hidden selection:bg-blue-200">
+    <!-- Main App Mount Point -->
     <div id="root"></div>
     
     <!-- Linking to LOML-specific Script -->
