--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
     <!-- Linking to LOML-specific CSS -->
-    <link rel="stylesheet" href="loml_style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-nunito overflow-x-hidden selection:bg-blue-200">
     <!-- Main App Mount Point -->
     <div id="root"></div>
     
     <!-- Linking to LOML-specific Script -->
-    <script type="text/babel" src="loml_script.js"></script>
+    <script type="text/babel" src="script.js"></script>
 </body>
 </html>
