--- a/index.html
+++ b/index.html
@@ -38,26 +38,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
-    <!-- Links pointing to standard filenames for repository compatibility -->
+    <!-- Configured for standalone repository export -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-nunito overflow-x-hidden selection:bg-blue-200">
-    <!-- Professional Launch Screen -->
-    <div id="launch-screen" class="fixed inset-0 z-[9999] flex flex-col items-center justify-center bg-[#eff6ff] transition-opacity duration-500 ease-out">
-        <div class="absolute inset-0 pointer-events-none opacity-50" style="background-image: radial-gradient(#dbeafe 2px, transparent 2px); background-size: 32px 32px;"></div>
-        
-        <div class="relative flex flex-col items-center animate-pop">
-            <span class="absolute -top-12 -left-10 text-5xl animate-bounce">🌸</span>
-            <img src="app-icon.png" class="w-40 h-40 drop-shadow-xl z-10" alt="Meow Macros">
-            <span class="absolute -bottom-2 -right-12 text-5xl animate-bounce" style="animation-delay: 0.5s">🌼</span>
-            <h2 class="text-2xl font-black text-blue-400 mt-8 tracking-tight text-center px-6">Ready to bloom &<br/>grow strong!</h2>
-        </div>
-    </div>
-
     <!-- Main App Mount Point -->
     <div id="root"></div>
     
-    <!-- Script pointing to standard filename for repository compatibility -->
+    <!-- Configured for standalone repository export -->
     <script type="text/babel" src="script.js"></script>
 </body>
 </html>
