--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
-    <!-- Configured for standalone repository export -->
+    <!-- Standalone repository export filenames -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-nunito overflow-x-hidden selection:bg-blue-200">
-    <!-- Main App Mount Point -->
     <div id="root"></div>
     
-    <!-- Configured for standalone repository export -->
+    <!-- Standalone repository export filenames -->
     <script type="text/babel" src="script.js"></script>
 </body>
 </html>
